Update "Run in Terminal" action